[metadata]
name = crowdkit
version = attr: crowdkit.__version__
url = https://github.com/Toloka/crowd-kit
author = Toloka
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Typing :: Typed
keywords = crowdsourcing, quality control, answer aggregation
license = Apache 2.0
description = Computational Quality Control for Crowdsourcing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
install_requires =
    attrs
    numpy
    pandas >= 1.1.0
    tqdm
    scikit-learn
    nltk
    transformers
python_requires = >= 3.7
packages = crowdkit
